--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -76,7 +76,7 @@
 .cambiarIdioma {
     position: relative;
     width: 50px;
-    transform: translateY(-5px);
+    transform: translateY(-25px);
 }
 
 
@@ -110,11 +110,13 @@
     background: var(--Color8);
 }
 
-/* color selector idioma  */
-
-.idioma {
-    color: var(--Color3);
+/* Tamaño banderas */
+.es,.en {
+    width: 50px;
+    height: 50px;
 }
+
+
 
 /* Acionador para el responsibe del menu */
 
@@ -186,6 +188,16 @@
         font-size: 20px;
     }
     
+    /* Tamaño banderas */
+    .es,.en {
+        width: 25px;
+        height: 25px;
+    }
+    .cambiarIdioma {
+        position: relative;
+        width: 50px;
+        transform: translateY(-13px);
+    }
     
 
 }
