--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -130,7 +130,7 @@
     display: none;
 }
 
-/* Estilos del main */
+/* Estilos del header */
 
 header {
     width: 100%;
@@ -174,6 +174,7 @@ header {
 .informacion h3 {
     text-align: center;
     text-transform: uppercase;
+    color: var(--Color4);
 }
 
 .informacion i {
@@ -187,6 +188,10 @@ header {
 
 .social a {
     text-decoration: none;;
+}
+
+.social i:hover {
+    background: var(--Color2);
 }
 
 .informacion .social {
@@ -282,5 +287,29 @@ header {
         transform: translateY(-13px);
     }
     
+    /* Header */
+
+    .informacion {
+        width:  30%;
+        height: 30%;
+        margin: auto auto;
+        background: var(--Color9);
+        border: solid 2px black;
+        border-radius: 20px;
+    }
+    
+    .informacion h1 {
+        font-size: 1.2em;
+    }
+    
+    .informacion h3 {
+        font-size: 1em;
+    }
+    
+    .informacion i {
+        font-size: 1.5em;
+    }
+
+
 
 }
