--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,7 @@
     --Color13: #ff5a68d2;
     --Color14: #323232;
     --Color15: #3f3e3e;
+    --Color16: #ff7783;
 }
 
 * {
@@ -319,7 +320,7 @@ header {
     position: relative;
 }
 
-.proyectos>h1 {
+.proyectos > h1 {
     text-align: center;
     color: white;
     font-size: 3.5em;
@@ -395,6 +396,39 @@ header {
 .proyecto:hover img {
     transform: scale(1.1) rotate(-3deg);
     transition: 0.8;
+}
+
+/* Contacto */
+.contacto {
+    height: 100vh;
+    background-color: var(--Color14);
+}
+
+.contacto h1 {
+    font-size: 3.5em;
+    color: white;
+    text-align: center;
+    padding: 25px 0;
+}
+
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    margin: auto auto;
+    background: var(--Color16);
+    width: 40%;
+    height: 75vh;
+    padding: 50px 0;
+    border: 4px solid var(--Color2);
+    border-radius: 20px;
+}
+
+.formulario input {
+    width: 70%;
+    height: 8%;
+    border-radius: 25px;
+    text-align: left;
 }
 
 /* Diseño responsibo */
