--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -145,7 +145,7 @@ header {
 
     /* Imagen Fondo */
 
-    background-image: url(../img/Fondo-Inicio.jpg);
+    background-image: url(../img//Fondos/Fondo-Inicio.jpg);
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
@@ -401,7 +401,10 @@ header {
 /* Contacto */
 .contacto {
     height: 100vh;
-    background-color: var(--Color14);
+    background-image: url(../img/Fondos/Fondo-Contacto.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .contacto h1 {
@@ -416,19 +419,81 @@ header {
     display: flex;
     flex-direction: column;
     margin: auto auto;
-    background: var(--Color16);
-    width: 40%;
+    width: 30%;
     height: 75vh;
     padding: 50px 0;
-    border: 4px solid var(--Color2);
-    border-radius: 20px;
+    background: transparent;
+    border: 2px solid var(--Color1);
+    border-radius: 30px;
+    backdrop-filter: blur(15px);
 }
 
 .formulario input {
+    margin: 25px auto;
     width: 70%;
     height: 8%;
     border-radius: 25px;
-    text-align: left;
+    border: none;
+    background: none;
+    border-bottom: 2px solid var(--Color2);
+    color: var(--Color1);
+    text-indent: 25px;
+}
+
+.formulario input::placeholder {
+    text-indent: 25px;
+    color: var(--Color1);
+}
+
+.formulario input:focus {
+    outline: none;
+    border: 2px solid var(--Color2);
+    transition: .9s;
+}
+
+.formulario textarea {
+    padding: 25px;
+    width: 80%;
+    margin: auto auto;
+    border-radius: 25px;
+    border: none;
+    background: none;
+    border-top: 2px solid var(--Color2);
+    border-bottom: 2px solid var(--Color2);
+    color: var(--Color1);
+    text-indent: 25px;
+
+}
+
+.formulario textarea::placeholder {
+    text-indent: 25px;
+    color: var(--Color1);
+}
+
+.formulario textarea:focus {
+    outline: none;
+    border: 2px solid var(--Color2);
+    transition: .9s;
+}
+
+/* Botton arriba */
+
+#botonArriba {
+    background: var(--Color2);
+    border-radius: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3em;
+    z-index: 2;
+    visibility: hidden;
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    width: 60px;
+    height: 60px;
+    color: var(--Color1);
+    transition: all .5s;
 }
 
 /* Diseño responsibo */
@@ -564,5 +629,11 @@ header {
 
     .proyecto:hover p {
         font-size: 15px;
+    }
+
+    /* Contacto */
+
+    .formulario {
+        width: 60%;
     }
 }
